--- a/resume/assets/css/styles.css
+++ b/resume/assets/css/styles.css
@@ -10,7 +10,7 @@ nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
  #div-page-name {
@@ -31,7 +31,7 @@ nav {
 
 #hero-section {
     background-color: rgb(105, 143, 143);
-    background-image: url("../images/Background.jpg");
+    background-image: url("../images/bg-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
